--- a/scss/project/_common.scss
+++ b/scss/project/_common.scss
@@ -295,11 +295,8 @@ select.padding-left-xs option,
   background-color: $alert-danger-bg;
 }
 
-.editable {
-  border: 1px solid $table-border-color;
-  
-  input,
-  &__input {
+.editable {  
+  input {
     background-color: transparent;
     border: 0;
     box-sizing: border-box;
